# dovecot-core

./: configure.ac
src/auth/: auth-request.c  mech-rpa.c
src/config/: config-connection.c  config-filter.c  config-parser.c  doveconf.c
src/dict/: dict-commands.c
src/director/: director.c  doveadm-connection.c
src/doveadm/: client-connection-tcp.c  doveadm-dict.c  doveadm-director.c  doveadm-dsync.c  server-connection.c
src/imap/: Makefile.am  cmd-append.c  imap-append-hooks.c  imap-append-hooks.h  imap-client-hibernate.c  imap-client.c  imap-client.h  imap-fetch.c  main.c  test-imap-client-hibernate.c
src/imap-login/: client-authenticate.c
src/lib-auth/: auth-client-request.c  auth-server-connection.c
src/lib-compression/: ostream-lzma.c  ostream-zstd.c
src/lib-dict/: dict-client.c  dict-file.c  dict-private.h  dict-sql-settings.c  dict-sql.c  dict.c
src/lib-fs/: fs-api.c
src/lib-fts/: fts-icu.c  test-fts-icu.c
src/lib-http/: http-client-connection.c  http-client-private.h  http-client-queue.c  http-client-request.c  http-server-connection.c  http-server-request.c  http-server-response.c  test-http-client-request.c  test-http-client.c
src/lib-imap/: imap-bodystructure.c  imap-parser.c
src/lib-imap-client/: imapc-client.c  imapc-connection.c  imapc-connection.h
src/lib-mail/: Makefile.am  (+26 more)
src/plugins/imap-append-scan-lua/: Makefile.am  imap-append-scan-lua-mail.c  imap-append-scan-lua-mail.h  imap-append-scan-lua-plugin.c  imap-append-scan-lua-plugin.h  imap-append-scan-lua-settings.c  imap-append-scan-lua-settings.h  imap-append-scan-lua.lua
(+113 files in other folders)
